Fix vertical alignment with wrapping color names

--- a/less/colorRegistration.less
+++ b/less/colorRegistration.less
@@ -25,3 +25,38 @@
 	}
 	}
 }
+
+.styleguide-view {
+	.colors {
+		i {
+			display: none;
+			padding: .5rem;
+			margin: .5rem;
+			width: 5rem;
+			height: 5rem;
+			position: relative;
+			align-items: center;
+			justify-content: center;
+			vertical-align: top;
+			&:before {
+				display: block;
+				opacity: 0;
+				z-index: 100;
+				color: black;
+				background-color: white;
+				border-radius: 4px;
+				white-space: pre-wrap;
+				padding: .5em;
+				text-align: center;
+				transition: opacity 400ms;
+				box-shadow: 0 0 5px rgba( 0,0,0,.2 );
+			}
+			&:hover:before {
+				opacity: 1;
+			}
+		}
+	}
+	img {
+		max-width: 100%;
+	}
+}
